# toy-math-prover

./: README.md  dataset.csv  dataset.py  environment.py  hello.py  infer.py  model.py  pyproject.toml  rules.py  test_expression.txt  train.py  tree.py
